# fanthom

./: .gitignore  .mise.toml  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  state.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: db.rs  main.rs  sidecar.rs  state.rs
apps/desktop/src-tauri/src/commands/: mod.rs  pipeline.rs  tab.rs
apps/desktop/src/components/: AudioPlayer.tsx  BpmControl.tsx  ExportMenu.tsx  OptimizeToggle.tsx  PipelineProgress.tsx  TabCanvas.tsx  TransposeControl.tsx  UrlInput.tsx
apps/desktop/src/lib/: tauri.ts  types.ts
crates/tab-engine/: Cargo.toml
crates/tab-engine/examples/: debug_detection.rs  pitch_test.rs
crates/tab-engine/src/: lib.rs  midi.rs  onset.rs  pitch.rs  tab.rs  transpose.rs  viterbi.rs
crates/tab-engine/src/export/: ascii.rs  mod.rs  musicxml.rs
docs/superpowers/plans/: 2026-04-12-fanthom-mvp.md  2026-04-12-onset-detection-technique.md  2026-04-12-parallel-precision.md
docs/superpowers/specs/: 2026-04-12-fanthom-design.md  2026-04-12-parallel-precision-design.md
python/ai-pipeline/: extract.py  main.py  protocol.py  pyproject.toml  requirements.txt  separate.py  transcribe.py
python/ai-pipeline/tests/: test_extract.py  test_protocol.py  test_separate.py  test_transcribe.py
